--- a/src/main/resources/static/assets/css/card.css
+++ b/src/main/resources/static/assets/css/card.css
@@ -11,6 +11,20 @@
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.7);
 }
 
+.card-img-container {
+    position: relative;
+}
+
+.card-price {
+    position: absolute;
+    top: 0;
+    right: 0;
+    border-radius: 0 0 0 10px;
+    background-color: rgba(255, 255, 255, 0.86);
+    padding: 5px 7px;
+}
+
+
 .card-body {
     padding: 10px;
     height: calc(100% - 220px);
