--- a/src/main/resources/static/assets/css/style.css
+++ b/src/main/resources/static/assets/css/style.css
@@ -3,7 +3,7 @@
 @import "card.css";
 @font-face {
     font-family: Roboto;
-    src: url("../font/Roboto-Thin.ttf");
+    src: url("../font/Roboto-Light.ttf");
 }
 @font-face {
     font-family: Neuro;
